--- a/calculator.html
+++ b/calculator.html
@@ -3,9 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculator</title>
+    <title>Calculator</title>
 </head>
+<style>
+    body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 10%;
+    }
+    .calculator{
+        border: 1px solid;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        width: 270px;
+        height: 350px;
+        padding: 20px;
+        background-color: #2c3e50;
+        padding-bottom: 60px;
+    }
+    input{
+        background-color: #34495e;
+        color: #fff;
+        padding: 30px;
+        padding-left: 50px;
+        text-align: right;
+        font-size: 15px;
+        box-sizing: border-box;
+        font-family: 'Courier New', Courier, monospace;
+        border-bottom: 2px solid #555;
+        height: 60px;
+        border: 2px solid grey;
+        border-radius: 5px;
+        margin-bottom: 15px;
+    }
+    .buttons{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 10px;
+        margin-top: 10px;
+        width: 10px;
+    }
+    .btn{
+        border: 1px solid grey;
+        background-color: #000000;
+        color: #fff;
+        padding: 15px;
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 60px;
+        height: 50px;
+    }
+    .btn.clear, .btn.backspace{
+        background-color: #e74c3c;
+    }
+    .btn.add{
+        grid-row: span 2;
+        height: calc(2 * 50px + 10px);
+    }
+    .btn.equal{
+        grid-column: span 2;
+        width: calc(2 * 60px + 10px);
+    }
+      
+
+</style>
 <body>
-    
+    <div class="calculator" id="calc">
+        <input type="text"  id="result">
+        <div class="buttons">
+            <button class="btn clear" value="c" onclick="clr()">C</button>
+            <button class="btn backspace" value="backspace" onclick="backspace()">&larr;</button>
+            <button class="btn" value="/" onclick="dis('/')" onkeydown="myFunction(event)">/</button>
+            <button class="btn" value="*" onclick="dis('*')" onkeydown="myFunction(event)">*</button>
+            <button class="btn" value="7" onclick="dis('7')" onkeydown="myFunction(event)">7</button>
+            <button class="btn" value="8" onclick="dis('8')" onkeydown="myFunction(event)">8</button>
+            <button class="btn" value="9" onclick="dis('9')" onkeydown="myFunction(event)">9</button>
+            <button class="btn" value="-" onclick="dis('-')" onkeydown="myFunction(event)">-</button>
+            <button class="btn" value="4" onclick="dis('4')" onkeydown="myFunction(event)">4</button>
+            <button class="btn" value="5" onclick="dis('5')" onkeydown="myFunction(event)">5</button>
+            <button class="btn"value="6" onclick="dis('6')" onkeydown="myFunction(event)">6</button>
+            <button class="btn add" value="+" onclick="dis('+')" onkeydown="myFunction(event)">+</button>
+            <button class="btn" value="1" onclick="dis('1')" onkeydown="myFunction(event)">1</button>
+            <button class="btn" value="2" onclick="dis('2')" onkeydown="myFunction(event)">2</button>
+            <button class="btn" value="3" onclick="dis('3')" onkeydown="myFunction(event)">3</button>
+            <button class="btn" value="0" onclick="dis('0')" onkeydown="myFunction(event)">0</button>
+            <button class="btn" value="." onclick="dis('.')" onkeydown="myFunction(event)">.</button>
+            <button class="btn equal" value="=" onclick="solve()">=</button>
+        </div>
+    </div>
+
+    <script>
+        //Function that display value
+        let dis=(val)=>{
+            document.getElementById("result").value += val
+        };
+
+        let myFunction=(event)=>{
+            if(event.key == '0' || event.key == '1' || event.key == '2' || event.key == '3' 
+                || event.key == '4' || event.key == '5' 
+                || event.key == '6' || event.key == '7' 
+                || event.key == '8' || event.key == '9' 
+                || event.key == '+' || event.key == '-' 
+                || event.key == '*' || event.key == '/')
+                document.getElementById("result").value += event.key
+        }
+
+        var cal = document.getElementById("calc");
+        cal.onkeyup = function (event) {
+            console.log("Enter");
+            let x = document.getElementById("result").value
+            console.log(x);
+            solve();
+        }
+
+        // Function that evaluates the digit and return result
+        let solve = () => {
+            let x = document.getElementById("result").value
+            let y = eval(x)
+            document.getElementById("result").value = y
+        }
+
+        // Function that clear the display 
+        let clr = () => { 
+            document.getElementById("result").value = "" 
+        } 
+
+        // Function that removes the lat character from the display
+        let backspace = () => {
+            let inputField = document.getElementById("result");
+            inputField.value = inputField.value.slice(0,-1)
+        }
+    </script>
 </body>
 </html>
